9 August 2007: Wouter
	- canonicalization, signature checks
	- dname signature label count and unit test.

8 August 2007: Wouter
	- ldns _raw routines created (in ldns trunk).
	- sigcrypt DS digest routines
	- val_utils uses sigcrypt to perform signature cryptography.
	- sigcrypt keyset processing

7 August 2007: Wouter
	- security status type.
	- security status is copied when rdata is equal for rrsets.
	- rrset id is updated to invalidate all the message cache entries
	  that refer to NSEC, NSEC3, DNAME rrsets that have changed.
	- val_util work
	- val_sigcrypt file for validator signature checks.

6 August 2007: Wouter
	- key cache for validator.
	- moved isroot and dellabel to own dname routines, with unit test.

3 August 2007: Wouter
	- replanning.
	- scrubber check section of lame NS set.
	- trust anchors can be in config file or read from zone file,
	  DS and DNSKEY entries.
	- unit test trust anchor storage.
	- trust anchors converted to packed rrsets.
	- key entry definition.

2 August 2007: Wouter
	- configure change for latest libevent trunk version (needs -lrt).
	- query_done and walk_supers are moved out of module interface.
	- fixup delegation point duplicates.
	- fixup iterator scrubber; lame NS set is let through the scrubber
	  so that the classification is lame.
	- validator module exists, and does nothing but pass through,
	  with calling of next module and return.
	- validator work.

1 August 2007: Wouter
	- set version to 0.5
	- module work for module to module interconnections.
	- config of modules.
	- detect cycle takes flags.

31 July 2007: Wouter
	- updated plan
	- release 0.4 tag.

30 July 2007: Wouter
	- changed random state init, so that sequential process IDs are not
	  cancelled out by sequential thread-ids in the random number seed.
	- the fwd_three test, which sends three queries to unbound, and 
	  unbound is kept waiting by ldns-testns for 3 seconds, failed
	  because the retry timeout for default by unbound is 3 seconds too,